docs: update readme styling