@@ -16,11 +16,11 @@ or
 ./gradlew build -PtargetArch=arm
 ```
 
-## How to use
+##  How to use
 ```shell script
 java --enable-preview -jar build/distributions/Kiosk-shadow-0.0.1/lib/Kiosk-0.0.1-all.jar
 ```
-# Installation
+## Installation
 - wget https://download.bell-sw.com/java/13.0.2+9/bellsoft-jre13.0.2+9-linux-aarch64-full.deb
 - dpkg -i bellsoft-jre13.0.2+9-linux-aarch64-full.deb
 - apt install -f
@@ -28,16 +28,43 @@ java --enable-preview -jar build/distributions/Kiosk-shadow-0.0.1/lib/Kiosk-0.0.
 - apt install xterm
 - apt install unclutter
 
-# --
+## --
 - nano /root/.xinitrc
-- unclutter &
-- bash /root/kiosk.sh
 
-# Autorun
+```
+unclutter &
+bash /root/kiosk.sh
+```
+- nano /root/kiosk.sh
+
+```bash
+#!/usr/bin/env sh
+
+echo "The script you are running has basename $(basename "$0"), dirname $(dirna$
+echo "The present working directory is $(pwd)"
+
+FOLDER=$(dirname "$0")
+CONFIG_PATH=""$FOLDER/application.yml""
+APP_PATH="$FOLDER/kiosk.jar"
+
+echo "FOLDER $FOLDER"
+echo "CONFIG_PATH is $CONFIG_PATH"
+echo "APP_PATH is $APP_PATH"
+
+xrandr -s 1920x1080
+
+java "-Dmicronaut.config.files=$CONFIG_PATH" --enable-preview -jar "$APP_PATH"
+```
+
+## Autorun
 - nano /etc/rc.local
-- sh -c "export HOME=/root; startx" &
+```
+sh -c "export HOME=/root; startx" &
+```
 - chmod +x /root/kiosk.sh
 
-# Set armbian screen resolution
+## Set armbian default screen resolution
 - nano /boot/armbianEnv.txt
-- setenv video-mode sunxi:1920x1080-24@60,monitor=hdmi,hpd=5000,edid=0
+```
+setenv video-mode sunxi:1920x1080-24@60,monitor=hdmi,hpd=5000,edid=0
+```
